<?php

interface Artblock_Component {
	public function create_component_settings();
}
